k8s-yaml-files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-dep
  creationTimestamp: null
  labels:
    app: demo-dep
  
spec:
  replicas: 3
  selector:
    matchLabels:
      app: demo-dep
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: demo-dep
    spec:
      containers:
      - image: eu.gcr.io/iti-ezzat/python-app:latest
        name: demo
        ports:
        - containerPort: 8000
        resources: {}
