k8s-yaml-files/redis.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: redis-pod
  name: redis-pod
spec:
  containers:
  - image: eu.gcr.io/iti-ezzat/redis:latest
    name: redis-pod
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
