k8s-yaml-files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  defaultBackend:
    service:
      name: demo-dep
      port:
        number: 8000
status:
  loadBalancer: {}
